# cloud-inspector

./: .env.example  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/workflows/: validate.yml
config/: models.yaml
discovery_states/: s3_discovery_20250128_184841.json
plan/: overview.md  project_definition.md
prompts/: aws_prompts.yaml
src/cloud_inspector/: __init__.py  __main__.py  cli.py  code_execution.py  code_generator.py  constants.py  discovery_manager.py  execution.py  execution_agent.py  iteration_manager.py  prompt_generator.py  prompts.py  workflow.py
src/cloud_inspector/components/: __init__.py  types.py
src/cloud_inspector/orchestration/: agent.py  nodes.py  orchestration.py  state.py
src/cloud_inspector/prompts/templates/: cloud_inspection.yaml
src/components/: __init__.py  models.py  types.py
src/langchain_components/: __init__.py  models.py  parsers.py  templates.py
tests/: conftest.py  test_cli.py  test_code_execution.py  test_code_generation.py  test_code_generator.py  test_execution_agent.py  test_integration.py  test_orchestration.py  test_prompt_generator.py  test_state.py
tests/fixtures/: test_models.yaml
